--- a/packages.bib
+++ b/packages.bib
@@ -11,17 +11,16 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2023},
+  year = {2020},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2023},
-  note = {R package version 0.37, 
-https://pkgs.rstudio.com/bookdown/},
-  url = {https://github.com/rstudio/bookdown},
+  year = {2022},
+  note = {R package version 0.31},
+  url = {https://CRAN.R-project.org/package=bookdown},
 }
 
 @Manual{R-cherryblossom,
@@ -34,138 +33,123 @@ https://pkgs.rstudio.com/bookdown/},
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
-  year = {2023},
-  note = {R package version 1.1.4},
-  url = {https://dplyr.tidyverse.org},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2022},
+  note = {R package version 1.0.10},
+  url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2023},
-  note = {R package version 1.0.0, 
-https://github.com/tidyverse/forcats},
-  url = {https://forcats.tidyverse.org/},
+  year = {2022},
+  note = {R package version 0.5.2},
+  url = {https://CRAN.R-project.org/package=forcats},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2023},
-  note = {R package version 3.4.4, 
-https://github.com/tidyverse/ggplot2},
-  url = {https://ggplot2.tidyverse.org},
+  note = {R package version 3.4.4},
+  url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
 @Manual{R-infer,
   title = {infer: Tidy Statistical Inference},
-  author = {Andrew Bray and Chester Ismay and Evgeni Chasnovski and Simon Couch and Ben Baumer and Mine Cetinkaya-Rundel},
-  year = {2023},
-  note = {R package version 1.0.5},
-  url = {https://github.com/tidymodels/infer},
+  author = {Andrew Bray and Chester Ismay and Evgeni Chasnovski and Ben Baumer and Mine Cetinkaya-Rundel},
+  year = {2020},
+  note = {R package version 0.5.3},
+  url = {https://CRAN.R-project.org/package=infer},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2023},
-  note = {R package version 1.45},
+  year = {2021},
+  note = {R package version 1.36},
   url = {https://yihui.org/knitr/},
-}
-
-@Manual{R-lubridate,
-  title = {lubridate: Make Dealing with Dates a Little Easier},
-  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
-  year = {2023},
-  note = {R package version 1.9.3, 
-https://github.com/tidyverse/lubridate},
-  url = {https://lubridate.tidyverse.org},
 }
 
 @Manual{R-openintro,
   title = {openintro: Data Sets and Supplemental Functions from OpenIntro Textbooks
 and Labs},
-  author = {Mine Çetinkaya-Rundel and David Diez and Andrew Bray and Albert Y. Kim and Ben Baumer and Chester Ismay and Nick Paterno and Christopher Barr},
-  year = {2022},
-  note = {R package version 2.4.0, 
-https://github.com/OpenIntroStat/openintro/},
-  url = {http://openintrostat.github.io/openintro/},
+  author = {Mine Çetinkaya-Rundel and David Diez and Andrew Bray and Albert Kim and Ben Baumer and Chester Ismay and Christopher Barr},
+  year = {2020},
+  note = {R package version 2.0.0},
+  url = {https://github.com/OpenIntroStat/openintro},
 }
 
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
-  author = {Hadley Wickham and Lionel Henry},
-  year = {2023},
-  note = {R package version 1.0.2},
-  url = {https://purrr.tidyverse.org/},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2024},
-  note = {R package version 2.1.5},
-  url = {https://readr.tidyverse.org},
+  year = {2022},
+  note = {R package version 2.1.3},
+  url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2023},
-  note = {R package version 2.25, 
-https://pkgs.rstudio.com/rmarkdown/},
-  url = {https://github.com/rstudio/rmarkdown},
+  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2022},
+  note = {R package version 2.14},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
   year = {2023},
-  note = {R package version 1.5.1, 
-https://github.com/tidyverse/stringr},
-  url = {https://stringr.tidyverse.org},
+  note = {R package version 1.5.1},
+  url = {https://CRAN.R-project.org/package=stringr},
 }
 
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2023},
-  note = {R package version 3.2.1},
-  url = {https://tibble.tidyverse.org/},
+  year = {2022},
+  note = {R package version 3.1.8},
+  url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
-  year = {2024},
-  note = {R package version 1.3.1},
-  url = {https://tidyr.tidyverse.org},
+  author = {Hadley Wickham and Maximilian Girlich},
+  year = {2022},
+  note = {R package version 1.2.0},
+  url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2023},
-  note = {R package version 2.0.0, 
-https://github.com/tidyverse/tidyverse},
-  url = {https://tidyverse.tidyverse.org},
+  year = {2022},
+  note = {R package version 1.3.2},
+  url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
 @Manual{R-tinytex,
   title = {tinytex: Helper Functions to Install and Maintain TeX Live, and Compile
 LaTeX Documents},
   author = {Yihui Xie},
-  year = {2023},
-  note = {R package version 0.49},
+  year = {2022},
+  note = {R package version 0.40},
   url = {https://github.com/rstudio/tinytex},
 }
 
 @Manual{R-usdata,
   title = {usdata: Data on the States and Counties of the United States},
-  author = {Mine Çetinkaya-Rundel and David Diez and Leah Dorazio},
-  year = {2021},
-  note = {R package version 0.2.0},
+  author = {Mine Çetinkaya-Rundel and David Diez},
+  year = {2020},
+  note = {R package version 0.1.0},
   url = {https://github.com/OpenIntroStat/usdata},
 }
 
@@ -173,8 +157,8 @@ LaTeX Documents},
   title = {webexercises: Create Interactive Web Exercises in R Markdown (Formerly
 webex)},
   author = {Dale Barr and Lisa DeBruine},
-  year = {2023},
-  note = {R package version 1.1.0},
+  year = {2021},
+  note = {R package version 1.0.0},
   url = {https://github.com/psyteachr/webexercises},
 }
 
@@ -184,7 +168,7 @@ webex)},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2016},
-  isbn = {978-1138700109},
+  note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
 }
 
@@ -195,17 +179,6 @@ webex)},
   year = {2016},
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
-}
-
-@Article{infer2021,
-  title = {{infer}: An {R} package for tidyverse-friendly statistical inference},
-  author = {Simon P. Couch and Andrew P. Bray and Chester Ismay and Evgeni Chasnovski and Benjamin S. Baumer and Mine Çetinkaya-Rundel},
-  journal = {Journal of Open Source Software},
-  year = {2021},
-  volume = {6},
-  number = {65},
-  pages = {3661},
-  doi = {10.21105/joss.03661},
 }
 
 @Book{knitr2015,
@@ -227,17 +200,7 @@ webex)},
   publisher = {Chapman and Hall/CRC},
   year = {2014},
   note = {ISBN 978-1466561595},
-}
-
-@Article{lubridate2011,
-  title = {Dates and Times Made Easy with {lubridate}},
-  author = {Garrett Grolemund and Hadley Wickham},
-  journal = {Journal of Statistical Software},
-  year = {2011},
-  volume = {40},
-  number = {3},
-  pages = {1--25},
-  url = {https://www.jstatsoft.org/v40/i03/},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
 @Book{rmarkdown2018,
@@ -246,7 +209,7 @@ webex)},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  isbn = {9781138359338},
+  note = {ISBN 9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -256,7 +219,7 @@ webex)},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  isbn = {9780367563837},
+  note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
@@ -276,7 +239,7 @@ webex)},
   author = {Yihui Xie},
   journal = {TUGboat},
   year = {2019},
-  volume = {40},
+  volumne = {40},
   number = {1},
   pages = {30--32},
   url = {https://tug.org/TUGboat/Contents/contents40-1.html},
